# simplecrud

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  scripts.py  setup.cfg
.github/workflows/: test.yml
crud_factory/: __init__.py  _sqlalchemy.py  factories.py
crudfactory/: __init__.py  factories.py  sqlalchemy.py
examples/simple_api/: api.py  crud.py  database.py  main.py  models.py  schemas.py  utils.py
simple_crud/: sqlalchemy.py
simplecrud/: __init__.py  sync_sqlalchemy.py
tests/: conftest.py  test_crud_factory.py  test_simplecrud.py  test_sqlalchemy_factory.py  test_version.py  utils.py
tests/sqlalchemy/: test_count.py  test_create.py  test_delete.py  test_get.py  test_get_multiple.py  test_update.py
tests/utils/: __init__.py  helpers.py  models.py  schemas.py
