[tool.poetry]
name = "crud-factory"
version = "0.1.0"
description = "CRUD factory for FastAPI applications."
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Kludex/crud-factory"
repository = "https://github.com/Kludex/crud-factory"
keywords = ["crud", "fastapi", "sqlalchemy"]
classifiers = [
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.7.2"
fastapi = "^0.61.2"
SQLAlchemy = { version = "^1.3.20", optional = true }

[tool.poetry.extras]
sqlalchemy = ["SQLAlchemy"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
sqlalchemy-stubs = "^0.3"
psycopg2-binary = "^2.8.6"
mysqlclient = "^2.0.1"
pytest-coverage = "^0.0"

[tool.poetry.scripts]
check_format = "scripts:check_format"
format = "scripts:format"
lint = "scripts:lint"
test = "scripts:test"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
